--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Tic Tac Toe</h1>
         <div class="container">
             <div class="game">
-                <button class="box">X</button>
+                <button class="box"></button>
                 <button class="box"></button>
                 <button class="box"></button>
                 <button class="box"></button>
